added a new button in user setting page instructor_only, appeared as Instructor Only on local site; disabled the button New Topic when trying to make a post

--- a/public/language/en-GB/global.json
+++ b/public/language/en-GB/global.json
@@ -151,5 +151,7 @@
 	"disabled": "Disabled",
 	"select": "Select",
 
-	"user-search-prompt": "Type something here to find users..."
+	"user-search-prompt": "Type something here to find users...",
+
+	"instructor_only": "Instructor Only"
 }
