initialized  anonymous variables

--- a/public/language/ar/admin/manage/privileges.json
+++ b/public/language/ar/admin/manage/privileges.json
@@ -34,6 +34,7 @@
 	"view_deleted": "View Deleted Posts",
 	"upvote-posts": "Upvote Posts",
 	"downvote-posts": "Downvote Posts",
+	"anonymize-posts": "Anonymize Posts",
 	"delete-topics": "Delete Topics",
 	"purge": "Purge",
 	"moderate": "Moderate",
