--- a/public/language/en-GB/error.json
+++ b/public/language/en-GB/error.json
@@ -71,6 +71,7 @@
 	"no-teaser": "Teaser does not exist",
 	"no-flag": "Flag does not exist",
 	"no-privileges": "You do not have enough privileges for this action.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
 
 	"category-disabled": "Category disabled",
 
