--- a/public/language/cs/error.json
+++ b/public/language/cs/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "Chyták neexistuje",
     "no-flag": "Flag does not exist",
     "no-privileges": "Na tuto akci nemáte dostatečné oprávnění.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "Kategorie zakázána",
     "topic-locked": "Téma uzamknuto",
     "post-edit-duration-expired": "Je vám umožněno upravit příspěvky jen po %1 sekund/y od jeho vytvoření",
