--- a/public/language/es/error.json
+++ b/public/language/es/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "El resumen no existe",
     "no-flag": "Flag does not exist",
     "no-privileges": "No tienes suficientes privilegios para realizar esta acción.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "Categoría deshabilitada",
     "topic-locked": "Tema bloqueado",
     "post-edit-duration-expired": "Sólo puedes editar mensajes durante %1 segundo(s) después de haberlo escrito",
