--- a/public/language/lt/error.json
+++ b/public/language/lt/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "Anonsas neegzistuoja",
     "no-flag": "Flag does not exist",
     "no-privileges": "Šiam veiksmui jūs neturite pakankamų privilegijų.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "Kategorija išjungta",
     "topic-locked": "Tema užrakinta",
     "post-edit-duration-expired": "Jums galima redaguoti pranešims tik %1 sekunde(s) po parašymo",
