--- a/public/language/ms/error.json
+++ b/public/language/ms/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "Pengusik tidak wujud",
     "no-flag": "Flag does not exist",
     "no-privileges": "Anda tidak mempunyai cukup keistimewaan untuk perbuatan ini.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "Kategori dilumpuhkan",
     "topic-locked": "Topik Dikunci",
     "post-edit-duration-expired": "Anda hanya dibenarkan menyunting kiriman selepas %1 saat() berlalu",
