--- a/public/language/ro/error.json
+++ b/public/language/ro/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "Teaser does not exist",
     "no-flag": "Flag does not exist",
     "no-privileges": "You do not have enough privileges for this action.",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "Categorie dezactivată",
     "topic-locked": "Subiect Închis",
     "post-edit-duration-expired": "You are only allowed to edit posts for %1 second(s) after posting",
