--- a/public/language/zh-TW/error.json
+++ b/public/language/zh-TW/error.json
@@ -63,6 +63,7 @@
     "no-teaser": "主題預覽不存在",
     "no-flag": "Flag does not exist",
     "no-privileges": "您的權限不足以執行此操作。",
+    "instructor-only": "Your instructor disabled you to post announcements.",
     "category-disabled": "版面已停用",
     "topic-locked": "主題已鎖定",
     "post-edit-duration-expired": "您只能在發表後 %1 秒內修改內容",
