Add instructor only for global and user language files

--- a/public/language/bg/global.json
+++ b/public/language/bg/global.json
@@ -122,5 +122,6 @@
     "edited": "Редактирано",
     "disabled": "Изключено",
     "select": "Избиране",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Започнете да пишете, за да потърсите потребител…"
 }
