--- a/public/language/es/global.json
+++ b/public/language/es/global.json
@@ -122,5 +122,6 @@
     "edited": "Editado",
     "disabled": "Desahabilitado",
     "select": "Seleccionar",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Escriba algo aquí para encontrar usuarios..."
 }
