--- a/public/language/fa-IR/global.json
+++ b/public/language/fa-IR/global.json
@@ -122,5 +122,6 @@
     "edited": "Edited",
     "disabled": "Disabled",
     "select": "انتخاب",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "برای پیدا کردن کاربر اینجا چیزی بنویسید..."
 }
