--- a/public/language/he/global.json
+++ b/public/language/he/global.json
@@ -122,5 +122,6 @@
     "edited": "נערך",
     "disabled": "מושבת",
     "select": "בחר",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "הקלד כאן משהו על מנת למצוא משתמשים..."
 }
