--- a/public/language/he/user.json
+++ b/public/language/he/user.json
@@ -195,5 +195,6 @@
     "emailUpdate.optional": "שדה זה הוא אופציונלי. אינך מחויב לספק את כתובת הדוא\"ל שלך, אך ללא דוא\"ל מאומת לא תוכל לשחזר את חשבונך או להתחבר באמצעות הדוא\"ל שלך.",
     "emailUpdate.required": "זהו שדה חובה",
     "emailUpdate.change-instructions": "מייל אימות יישלח לכתובת דוא\"ל שהכנסת עם קישור ייחודי. לחיצה על הקישור יאמת את בעלותך על הדוא\"ל ותקבל גישה לחשבונך. בכל זמן, תוכל לעדכן את כתובת הדוא\"ל שלך בדף החשבון שלך.",
+    "instructor_only": "Only Instructors are able to post announcements",
     "emailUpdate.password-challenge": "אנא הזן את הסיסמה שלך כדי לאמת את הבעלות על החשבון."
 }
