--- a/public/language/hy/global.json
+++ b/public/language/hy/global.json
@@ -122,5 +122,6 @@
     "edited": "Խմբագրված",
     "disabled": "Անջատված",
     "select": "Ընտրել",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Մուտքագրեք ինչ-որ բան այստեղ՝ օգտատերեր գտնելու համար..."
 }
