--- a/public/language/hy/user.json
+++ b/public/language/hy/user.json
@@ -195,5 +195,6 @@
     "emailUpdate.optional": "Այս դաշտը պարտադիր չէ: Դուք պարտավոր չեք տրամադրել ձեր էլ.փոստի հասցեն, սակայն առանց վավերացված էլ.փոստի դուք չեք կարողանա վերականգնել ձեր հաշիվը կամ մուտք գործել ձեր էլ.",
     "emailUpdate.required": "Այս դաշտը պարտադիր է:",
     "emailUpdate.change-instructions": "Մուտքագրված էլ. հասցեին կուղարկվի հաստատման նամակ՝ եզակի հղումով: Այդ հղումը մուտք գործելը կհաստատի էլփոստի հասցեի ձեր սեփականությունը, և այն կակտիվանա ձեր հաշվում: Ցանկացած ժամանակ դուք կարող եք թարմացնել ձեր էլ.փոստը ձեր հաշվի էջից:",
+    "instructor_only": "Only Instructors are able to post announcements",
     "emailUpdate.password-challenge": "Խնդրում ենք մուտքագրել ձեր գաղտնաբառը՝ հաշվի սեփականության իրավունքը հաստատելու համար:"
 }
