--- a/public/language/lv/global.json
+++ b/public/language/lv/global.json
@@ -122,5 +122,6 @@
     "edited": "Rediģētie",
     "disabled": "Atspējotie",
     "select": "Atlasīt",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Ieraksti kaut ko šeit, lai meklētu lietotājus..."
 }
