--- a/public/language/nl/global.json
+++ b/public/language/nl/global.json
@@ -122,5 +122,6 @@
     "edited": "Bewerkt",
     "disabled": "Uitgeschakeld",
     "select": "Selecteer",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Typ hier om gebruikers te vinden..."
 }
