--- a/public/language/pl/global.json
+++ b/public/language/pl/global.json
@@ -122,5 +122,6 @@
     "edited": "Edytowany",
     "disabled": "Wyłączony",
     "select": "Wybierz",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Aby znaleźć użytkowników, wpisz tutaj..."
 }
