--- a/public/language/pt-BR/global.json
+++ b/public/language/pt-BR/global.json
@@ -122,5 +122,6 @@
     "edited": "Editado",
     "disabled": "Desativado",
     "select": "Escolha",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Digite alguma coisa aqui para encontrar usuários..."
 }
