--- a/public/language/pt-PT/global.json
+++ b/public/language/pt-PT/global.json
@@ -122,5 +122,6 @@
     "edited": "Editado",
     "disabled": "Desativado",
     "select": "Selecionar",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Digita algo aqui para encontrar utilizadores..."
 }
