--- a/public/language/sk/global.json
+++ b/public/language/sk/global.json
@@ -122,5 +122,6 @@
     "edited": "Zmenené",
     "disabled": "Zablokovaný",
     "select": "Vybrať",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Pre hľadanie používateľov, píšte sem..."
 }
