--- a/public/language/sq-AL/global.json
+++ b/public/language/sq-AL/global.json
@@ -122,5 +122,6 @@
     "edited": "U rregullua",
     "disabled": "Zhblloko",
     "select": "Zgjidh",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Shkruani diçka këtu për të gjetur përdorues..."
 }
