--- a/public/language/sr/global.json
+++ b/public/language/sr/global.json
@@ -122,5 +122,6 @@
     "edited": "Уређено",
     "disabled": "Онемогућено",
     "select": "Изабери",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Uкуцајте нешто овде како бисте пронашли кориснике..."
 }
