--- a/public/language/sv/global.json
+++ b/public/language/sv/global.json
@@ -122,5 +122,6 @@
     "edited": "Redigerad",
     "disabled": "Avstängd",
     "select": "Välj",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Skriv något för att hitta användare"
 }
