--- a/public/language/tr/global.json
+++ b/public/language/tr/global.json
@@ -122,5 +122,6 @@
     "edited": "Düzenlendi",
     "disabled": "Devre dışı",
     "select": "Seç",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Kullanıcı bulmak için buraya yazın ..."
 }
