--- a/public/language/uk/global.json
+++ b/public/language/uk/global.json
@@ -122,5 +122,6 @@
     "edited": "Відредаговано",
     "disabled": "Вимкнено",
     "select": "Обрати",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Введіть щось тут, щоб знайти користувачів..."
 }
