--- a/public/language/vi/global.json
+++ b/public/language/vi/global.json
@@ -122,5 +122,6 @@
     "edited": "Đã cập nhật",
     "disabled": "Đã tắt",
     "select": "Chọn",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Nhập để tìm kiếm thành viên"
 }
