--- a/public/language/zh-CN/global.json
+++ b/public/language/zh-CN/global.json
@@ -122,5 +122,6 @@
     "edited": "已编辑",
     "disabled": "禁用",
     "select": "选择",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "输入以查找用户"
 }
