--- a/public/language/ar/global.json
+++ b/public/language/ar/global.json
@@ -122,5 +122,6 @@
     "edited": "حُرِر",
     "disabled": "معطل",
     "select": "تحديد",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Type something here to find users..."
 }
