--- a/public/language/cs/global.json
+++ b/public/language/cs/global.json
@@ -122,5 +122,6 @@
     "edited": "Upraveno",
     "disabled": "Nepovoleno",
     "select": "Vyberte",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Pro hledání uživatelů, zde pište..."
 }
