--- a/public/language/de/global.json
+++ b/public/language/de/global.json
@@ -122,5 +122,6 @@
     "edited": "Bearbeitet",
     "disabled": "Deaktiviert",
     "select": "Auswählen",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Gib hier etwas ein um Benutzer zu finden..."
 }
