--- a/public/language/en-US/modules.json
+++ b/public/language/en-US/modules.json
@@ -78,6 +78,5 @@
     "thumbs.modal.resize-note": "<strong>Note</strong>: This forum is configured to resize topic thumbnails down to a maximum width of %1px",
     "thumbs.modal.add": "Add thumbnail",
     "thumbs.modal.remove": "Remove thumbnail",
-    "thumbs.modal.confirm-remove": "Are you sure you want to remove this thumbnail?",
-    "instructor_only": "This enables the instructor only function"
+    "thumbs.modal.confirm-remove": "Are you sure you want to remove this thumbnail?"
 }
