--- a/public/language/fi/global.json
+++ b/public/language/fi/global.json
@@ -122,5 +122,6 @@
     "edited": "Muokattu",
     "disabled": "Disabled",
     "select": "Valitse",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Type something here to find users..."
 }
