--- a/public/language/it/global.json
+++ b/public/language/it/global.json
@@ -122,5 +122,6 @@
     "edited": "Modificato",
     "disabled": "Disabilitato",
     "select": "Seleziona",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Scrivi qui per avviare la ricerca utenti"
 }
