--- a/public/language/ja/global.json
+++ b/public/language/ja/global.json
@@ -122,5 +122,6 @@
     "edited": "編集されました",
     "disabled": "無効",
     "select": "選択",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Type something here to find users..."
 }
