--- a/public/language/ko/global.json
+++ b/public/language/ko/global.json
@@ -122,5 +122,6 @@
     "edited": "수정되었습니다.",
     "disabled": "비활성화",
     "select": "선택",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "사용자를 찾기 위해 여기에 검색어를 입력하십시오..."
 }
