--- a/public/language/nb/global.json
+++ b/public/language/nb/global.json
@@ -122,5 +122,6 @@
     "edited": "Redigert",
     "disabled": "Deaktivert ",
     "select": "Velg",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Skriv her for å finne andre brukere..."
 }
