--- a/public/language/sr/user.json
+++ b/public/language/sr/user.json
@@ -195,5 +195,6 @@
     "emailUpdate.optional": "<strong>Ово поље је опционо</strong>. Нисте обавезни да наведете своју адресу е-поште, али без ваљане е-поште нећете моћи да вратите свој налог или да се пријавите помоћу своје е-поште.",
     "emailUpdate.required": "<strong>Ово поље је обавезно</strong>.",
     "emailUpdate.change-instructions": "На унету адресу е-поште биће послата потврдна порука са јединственом везом. Приступ тој вези потврдиће ваше власништво над адресом е-поште и она ће постати активна на вашем налогу. У било ком тренутку можете да ажурирате своју е-пошту на страници налога.",
+    "instructor_only": "Only Instructors are able to post announcements",
     "emailUpdate.password-challenge": "Унесите лозинку да бисте потврдили власништво над налогом."
 }
