--- a/public/language/th/global.json
+++ b/public/language/th/global.json
@@ -122,5 +122,6 @@
     "edited": "ถูกแก้ไขแล้ว",
     "disabled": "ปิด",
     "select": "เลือก",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "Type something here to find users..."
 }
