--- a/public/language/zh-TW/global.json
+++ b/public/language/zh-TW/global.json
@@ -122,5 +122,6 @@
     "edited": "已編輯",
     "disabled": "停用",
     "select": "選擇",
+    "instructor_only": "Instructor Only",
     "user-search-prompt": "輸入以搜尋使用者"
 }
